# lofi.nvim

./: .gitignore  .luarc.json  CLAUDE.md  README.md
.claude/commands/speckit/: speckit.implement.md
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
daemon/: Cargo.toml
daemon/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
daemon/src/audio/: mod.rs  wav.rs
daemon/src/cache/: mod.rs  tracks.rs
daemon/src/generation/: mod.rs  pipeline.rs  queue.rs
daemon/src/models/: audio_codec.rs  backend.rs  decoder.rs  delay_pattern.rs  downloader.rs  loader.rs  logits.rs  mod.rs  text_encoder.rs
daemon/src/models/ace_step/: decoder.rs  generate.rs  mod.rs  scheduler.rs
daemon/src/models/musicgen/: decoder.rs  text_encoder.rs
daemon/src/rpc/: methods.rs  mod.rs  server.rs  types.rs
daemon/src/types/: config.rs  job.rs  mod.rs  track.rs
docs/: design.md
docs/features/: ace-step.md  ai-generation.md  audio-continuation.md  audio-playback.md  cache-management.md  daemon-lifecycle.md  health-check.md  implementation-order.md  lofi-lora-training.md  lofi-vision.md  playlist-queue.md  plugin-setup.md  prefetch.md  procedural-generation.md  progress-notifications.md  statusline.md  telescope.md
lua/lofi/: daemon.lua  events.lua  init.lua  rpc.lua
plugin/: lofi.lua
specs/001-musicgen-onnx/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-musicgen-onnx/checklists/: requirements.md
specs/002-ace-step/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+5 files in other folders)
