[package]
name = "lofi-daemon"
version = "0.1.0"
edition = "2021"
description = "AI music generation daemon with MusicGen and ACE-Step backends"
license = "MIT"

[dependencies]
# ONNX Runtime bindings
ort = { version = "2.0.0-rc.9", features = ["half", "ndarray"] }

# Tensor operations
ndarray = "0.16.1"

# Text tokenization
tokenizers = "0.19.1"

# Float16 support for fp16 models
half = "2.4.1"

# WAV file encoding
hound = "3.5.1"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream", "blocking"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SHA256 hashing for track IDs
sha2 = "0.10"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Platform-specific directories
directories = "5"

# Random number generation for sampling
rand = "0.8"

# ChaCha RNG for reproducible generation
rand_chacha = "0.3"

# Random distributions (StandardNormal for scheduler noise)
rand_distr = "0.4"

# Audio resampling (44.1kHz -> 48kHz)
rubato = "0.15"

# Hex encoding for track IDs
hex = "0.4"

# Numeric traits for tensor operations
num-traits = "0.2"

[dev-dependencies]
# Temporary files for tests
tempfile = "3"
